--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
+  <div class="mw7 mw7-ns center pa2 ph3-ns">
     <app-root></app-root>
   </div>
 </body>
